Improving clarity and preventing stretching

--- a/main.css
+++ b/main.css
@@ -1,2 +1,10 @@
-body { margin: 0; }
-canvas { width: 100%; height: 100% }
+html,body{
+	background-color: #000000;
+	margin: 0px;
+	height: 100%;
+}
+canvas{
+	width: 100%;
+	height: 100%;
+	display: block;
+}
